feat: Added delete profile method
