# docs/swagger.json
@@ -311,7 +311,7 @@
                         "ApiKeyAuth": []
                     }
                 ],
-                "description": "Get a user account.",
+                "description": "Get user account.",
                 "consumes": [
                     "application/json"
                 ],
@@ -420,6 +420,68 @@
                         }
                     }
                 }
+            },
+            "delete": {
+                "security": [
+                    {
+                        "ApiKeyAuth": []
+                    }
+                ],
+                "description": "Delete user profile.",
+                "consumes": [
+                    "application/json"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "User Profile"
+                ],
+                "summary": "Delete User Profile",
+                "operationId": "delete-user-account",
+                "parameters": [
+                    {
+                        "description": "Account password",
+                        "name": "input",
+                        "in": "body",
+                        "required": true,
+                        "schema": {
+                            "$ref": "#/definitions/domain.DeleteProfileInput"
+                        }
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "OK",
+                        "schema": {
+                            "$ref": "#/definitions/handler.response"
+                        }
+                    },
+                    "400": {
+                        "description": "Bad Request",
+                        "schema": {
+                            "$ref": "#/definitions/handler.response"
+                        }
+                    },
+                    "404": {
+                        "description": "Not Found",
+                        "schema": {
+                            "$ref": "#/definitions/handler.response"
+                        }
+                    },
+                    "500": {
+                        "description": "Internal Server Error",
+                        "schema": {
+                            "$ref": "#/definitions/handler.response"
+                        }
+                    },
+                    "default": {
+                        "description": "",
+                        "schema": {
+                            "$ref": "#/definitions/handler.response"
+                        }
+                    }
+                }
             }
         },
         "/profile/orders": {
@@ -439,7 +501,7 @@
                 "tags": [
                     "User Profile"
                 ],
-                "summary": "User Get Orders",
+                "summary": "Get Orders",
                 "operationId": "get-orders",
                 "parameters": [
                     {
@@ -504,7 +566,7 @@
                 "tags": [
                     "User Profile"
                 ],
-                "summary": "User Create Order",
+                "summary": "Create Order",
                 "operationId": "create-order",
                 "parameters": [
                     {
@@ -568,7 +630,7 @@
                 "tags": [
                     "User Profile"
                 ],
-                "summary": "User Get Order By Id",
+                "summary": "Get Order By Id",
                 "operationId": "get-order-by-id",
                 "parameters": [
                     {
@@ -645,6 +707,14 @@
                 },
                 "quantity": {
                     "type": "integer"
+                }
+            }
+        },
+        "domain.DeleteProfileInput": {
+            "type": "object",
+            "properties": {
+                "password": {
+                    "type": "string"
                 }
             }
         },
